@@ -1,22 +1,23 @@
 package io.github.sruby.jvm;
 
+import org.junit.jupiter.api.Test;
+
 import java.util.ArrayList;
 import java.util.List;
 
 /**
- * out memory demo
+ * full gc demo
+ *  -Xmx50M -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -Xloggc:./fullgcdemo-gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./fullgcdemo-dump.hprof
+ *  old generation: 50/3*2=25M
  * @author sruby
- * @date 2022-3-17 22:46
  */
-public class OutMemory {
-    /**
-     * 增加一下参数导致java.lang.OutOfMemoryError
-     * -Xmx50M -XX:+PrintGCDetails
-     * @param args
-     */
-    public static void main(String[] args) {
+public class FullGCDemo {
+
+
+    @Test
+    public void testOutMemory(){
         List<Byte[]> list=new ArrayList<Byte[]>();
-        for(int i=0;i<100;i++){
+        for(int i=0;i<25;i++){
             //构造1M大小的byte数值
             Byte[] bytes=new Byte[1024*1024];
             //将byte数组添加到list列表中，因为存在引用关系所以bytes数组不会被GC回收
